# sfml-template

./: .gitmodules  CMakeLists.txt  README.md
source/: main.cpp
